# tefas-analyzer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
tefas_analyzer/: __init__.py  __main__.py  api.py  cli.py  utils.py
tefas_analyzer/core/: __init__.py  analytics.py  parser.py  plotter.py  scraper.py
tests/: test_api.py  test_cli.py  test_core.py
